# cheapskate

./: .gitignore  BENCHMARKS.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  handoff.md  pyproject.toml  release-profile.yaml
.gemini/: styleguide.md
.github/workflows/: ci.yml  pricing-refresh.yml
docs/: .ca-patterns.md  ARCHITECTURE.md  BACKLOG.md  QA_CASES.md
docs/plans/: global-model-self-healing.md
docs/specs/: self-healing-lifecycle-hardening.md
integrations/: README.md
integrations/claude-code/: CLAUDE.md.snippet  README.md  cheapskate.mcp.json
integrations/claude-code/skills/offload/: SKILL.md
integrations/codex/: AGENTS.md.snippet  README.md  config.toml.snippet
integrations/gemini-cli/: GEMINI.md.snippet  README.md  settings.snippet.json
integrations/openai-compatible/: README.md  curl-examples.sh  python-openai-sdk.py
scripts/: refresh_pricing.py
src/cheapskate/: __init__.py  cli.py  client.py  config.py  contracts.py  doctor.py  mcp_server.py  paths.py  self_healing.py  telemetry.py
src/cheapskate/backends/: __init__.py  mlx.py  ollama.py  preflight.py  resolve.py
src/cheapskate/broker/: __init__.py  app.py  capacity.py  gates.py
src/cheapskate/cloud/: __init__.py  adapters.py
src/cheapskate/econ/: __init__.py  costmath.py  governor.py  power.py  pricing.json  pricing.py  report.py
src/cheapskate/evals/: __init__.py  fixtures.py  runner.py
src/cheapskate/registry/: __init__.py  currency.py  registry.py
src/cheapskate/router/: __init__.py  dial.py  routes.py  task.py
tests/: conftest.py  test_backends.py  test_broker_bind.py  test_broker_gates.py  test_broker_integration_smoke.py  test_broker_openai_endpoint.py  test_capacity.py  test_cli.py  test_client.py  test_cloud_adapters.py  test_config.py  test_costmath.py  test_currency.py  test_currency_harness.py  test_dial.py  test_doctor.py  test_evals.py  test_governor.py  test_local_task_path.py  test_mcp_server.py  test_power.py  test_pricing.py  test_registry.py  test_report.py  test_routes.py  test_seams.py  test_self_healing.py  test_task.py  test_task_cloud.py  test_telemetry.py
