[project]
name = "cheapskate"
version = "0.1.0.dev0"
description = "Routes every task to the cheapest model that passes your quality bar - local or cloud - and shows you the receipts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Jason Knapp" }]
keywords = ["llm", "routing", "local-llm", "ollama", "mlx", "cost", "finops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
mcp = ["mcp>=1.0"]

[project.scripts]
cheapskate = "cheapskate.cli:main"

[project.urls]
Homepage = "https://github.com/jasonjknapp/cheapskate"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cheapskate"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
